--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -69,6 +69,12 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="main.aspx"/>
+      </files>
+    </defaultDocument>
     <modules>
       <remove name="FormsAuthentication"/>
       <remove name="ApplicationInsightsWebTracking"/>
